[package]
authors = ["Nelson Chen <nelson@mindflakes.com>"]
description = "Speedtest.net testing utility and crate"
exclude = ["tests/config/*"]
license = "MIT OR Apache-2.0"
name = "speedtest-rs"
repository = "https://github.com/nelsonjchen/speedtest-rs"
version = "0.1.3"
edition = "2018"

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.14"
url = "2.2.2"
mockito = "0.30.0"
md5 = "0.7.0"
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] }
roxmltree = "0.14.1"
rayon = "1.5.1"
iter-read = "0.3.0"
thiserror = "1.0.29"

[dependencies.reqwest]
version = "0.11.4"
features = ["blocking"]

[features]
rustls-tls = ["reqwest/rustls-tls"]
